; ModuleID = '/home/carl/AnghaBench/tmux/extr_screen-write.c_screen_write_mode_clear.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_screen-write.c_screen_write_mode_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.screen_write_ctx = type { %struct.screen* }
%struct.screen = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @screen_write_mode_clear(%struct.screen_write_ctx* %0, i32 %1) #0 {
  %3 = alloca %struct.screen_write_ctx*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.screen*, align 8
  store %struct.screen_write_ctx* %0, %struct.screen_write_ctx** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.screen_write_ctx*, %struct.screen_write_ctx** %3, align 8
  %7 = getelementptr inbounds %struct.screen_write_ctx, %struct.screen_write_ctx* %6, i32 0, i32 0
  %8 = load %struct.screen*, %struct.screen** %7, align 8
  store %struct.screen* %8, %struct.screen** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = xor i32 %9, -1
  %11 = load %struct.screen*, %struct.screen** %5, align 8
  %12 = getelementptr inbounds %struct.screen, %struct.screen* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = and i32 %13, %10
  store i32 %14, i32* %12, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
